Atualização das dependências do Node que o Bot do GitHub indicou vulnerabilidades

--- a/views/RunMenu.ejs
+++ b/views/RunMenu.ejs
@@ -3,21 +3,28 @@
         <div class="col bg-dark text-white h5 p-2 rounded">Corrida</div>
     </div>
     <div class="row text-center">
-        <div class="col-4">
+        <div class="col-3">
+            <a href="/run/mapa" class="link"> 
+                <img src="../img/map1.png" style="width: 8vw;" class="my-2">
+                <br>
+               <span class="legico">Gravar Corria <br>(Ao Vivo)</span>
+            </a>
+        </div>
+        <div class="col-3">
             <a href="/run/nova" class="link">
                 <img src="../img/newrun.jpg" style="width: 8vw;" class="my-2">
                 <br>
-                <span class="legico">Registrar Corrida</span>
+                <span class="legico">Digitar e Gravar Corrida</span>
             </a>                
         </div>
-        <div class="col-4">
+        <div class="col-3">
             <a href="/run/lista" class="link">
                 <img src="../img/tracks.jpg" style="width: 8vw;" class="my-2">
                 <br>
                 <span class="legico">Ver Corridas Salvas</span>
             </a>
         </div>
-        <div class="col-4">
+        <div class="col-3">
             <a href="/run/best" class="link"> 
                 <img src="../img/runrecord.jpg" style="width: 8vw;" class="my-2">
                 <br>
