--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -3,16 +3,20 @@
   <head>
     <%- include('meta'); %>
     <title>Mapa da Localização Atual</title>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEZEBwEq2FCna70N-F9rWX5pSdqnWYt4E&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
       defer
     ></script>
     <style type="text/css">
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 90%;
+        height: 100%;
         width: 100%;
       }
 
