--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,7 +15,7 @@
         <main class="container">
             <%- include('PlanMenu'); %>
             <br>
-            <%= include('RunMenu'); %>
+            <%- include('RunMenu'); %>
         </main>
     </body>
     <% %>
